--- a/gymHouse/templates/index.html
+++ b/gymHouse/templates/index.html
@@ -35,6 +35,15 @@
                 </ol>
             </nav>
             <button class="main__button">  Iniciar Sesion  </button>
+            <div class="modal_login">
+                <form action="">
+                    <label for="user">Usuario</label>
+                    <input type="text" id="user" name="user">
+                    <label for="pass">Contraseña</label>
+                    <input type="text" id="pass" name="password">
+                    <input type="submit" id="ingresar" value="Ingresar">
+                </form>
+            </div>
         </header>
         <div class="main__container"> 
             <div class="title__container">
