Creacion de login/logout

--- a/gymHouse/templates/index.html
+++ b/gymHouse/templates/index.html
@@ -36,12 +36,16 @@
             </nav>
             <button class="main__button">  Iniciar Sesion  </button>
             <div class="modal_login">
-                <form action="">
-                    <label for="user">Usuario</label>
+                {{error}}
+                <form action="" method ="POST">
+                    {% csrf_token %}
+                    {% comment %} <label for="user">Usuario</label>
                     <input type="text" id="user" name="user">
                     <label for="pass">Contraseña</label>
                     <input type="text" id="pass" name="password">
-                    <input type="submit" id="ingresar" value="Ingresar">
+                    <input type="submit" id="ingresar" value="Ingresar"> {% endcomment %}
+                    {{form}}
+                    <button type="submit">Ingresar</button>
                 </form>
             </div>
         </header>
