--- a/gymHouse/templates/index_alumnos.html
+++ b/gymHouse/templates/index_alumnos.html
@@ -1,50 +1,48 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="es">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="header" content="" />
-        <link rel="stylesheet" href="assets/styles_menu.css" />
-        <link rel="stylesheet" href="assets/styles_menu-celu.css">
-        <link rel="stylesheet" href="assets/styles_alumnos-landing.css" />
+        <link rel="stylesheet" href="{% static 'css/styles_menu.css' %}" />
+        <link rel="stylesheet" href="{% static 'css/styles_menu-celu.css' %}">
+        <link rel="stylesheet" href="{% static 'css/styles_alumnos-landing.css' %}" />
         <title>GymHouse: Alumnos</title>
     
     
     </head>
     <body>
 
-        <input type="checkbox" class="checkbox" id="menu-toogle"/>
-        <label for="menu-toogle" class="menu-toogle"><img src="assets/images/menu.png"></label>
-
         <nav class="menu">
             <div class="menu_icons">
                 <ul>
                     <li>
                         <a href="index_alumnos.html">
-                            <img class="logo" src="assets/images/logo.png">
+                            <img class="logo" src="{% static 'images/logo.png' %}">
                         </a> 
                     </li> 
                     <li>
                         <a href="alumnos_perfil.html">
-                            <img src="assets/images/user.png">
+                            <img src="{% static 'images/user.png' %}">
                             <p>Perfil</p>
                         </a>
                     </li> 
                     <li> 
-                        <a href="alumnos_entrenar.html">
-                            <img src="assets/images/gym/gym.png">
+                        <a href="{% url 'entrenamiento:ejercicios' %}">
+                            <img src="{% static 'images/gym/gym' %}.png">
                             <p>Entrenar</p> 
                         </a> 
                     </li>
                     <li>
-                        <a href="alumnos_noticias.html">
-                            <img src="assets/images/edit.png">
+                        <a href="{% url 'posts:noticias' %}">
+                            <img src="{% static 'images/edit.png' %}">
                             <p>Noticias</p>
                         </a>
                     </li>
                     <li>
-                        <a href="alumnos_turnos.html">
-                            <img src="assets/images/calendar.png">
+                        <a href="{% url 'personas:turnos' %}">
+                            <img src="{% static 'images/calendar.png' %}">
                             <p>Turnos</p>
                         </a>
                     </li>
@@ -53,10 +51,10 @@
         </nav>
 
         <div class="navigation" id="navigation">
-        
+            
             <ul>
                 <li class="list">
-                    <a href="index_alumnos.html">
+                    <a href="{% url 'login_user' %}">
                         <span class="icon"><ion-icon name="home-outline"></ion-icon></span>
                         <span class="text">Inicio</span>
                     </a>
@@ -68,19 +66,19 @@
                     </a>
                 </li>
                 <li class="list">
-                    <a href="alumnos_entrenar.html">
+                    <a href="{% url 'entrenamiento:ejercicios' %}">
                         <span class="icon"><ion-icon name="chatbubble-outline"></ion-icon></span>
                         <span class="text">Entrenar</span>
                     </a>
                 </li>
                 <li class="list">
-                    <a href="alumnos_noticias.html">
+                    <a href="{% url 'posts:noticias' %}">
                         <span class="icon"><ion-icon name="camera-outline"></ion-icon></span>
                         <span class="text">Noticias</span>
                     </a>
                 </li>
                 <li class="list">
-                    <a href="alumnos_turnos.html">
+                    <a href="{% url 'personas:turnos' %}">
                         <span class="icon"><ion-icon name="settings-outline"></ion-icon></span>
                         <span class="text">Turnos</span>
                     </a>
@@ -90,41 +88,24 @@
         </div>
         <div class="navigation--space" id="navigation--space"></div>
     
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-        <script src="https://kit.fontawesome.com/1169c95eac.js" crossorigin="anonymous"></script>
-        <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-        <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-        <script> document.getElementById("eprofile").style.display='none'; </script>
+        
 
         <section class="landing">
             <div class="landing-noticias">
                 <h1>Te podría interesar...</h1>
                 <div class="landing-noticias-news">
-                    <div class="noticia-sec">
-                        <a src="#"> <!-- agregar que redireccione a la noticia -->
-                            <img src="assets/images/entrenamiento.webp">
-                            <div class="titulo-noticiasecundaria"> 
-                                <p>Beneficios del estiramiento</p>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="noticia-principal">
-                        <a src="#"> <!-- agregar que redireccione a la noticia -->
-                            <img src="assets/images/tacos.webp">
-                            <div class="titulo-noticiaprincipal">
-                                <p>Tacos Healty sin TACC</p>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="noticia-sec">
-                        <a src="#"> <!-- agregar que redireccione a la noticia -->
-                            <img src="assets/images/herramientas.jpg">
-                            <div class="titulo-noticiasecundaria">
-                                <p>Disciplinas complementarias</p>
-                            </div>
-                        </a>
-                    </div>
+                    {% for post in posts %}
+                        <div class="noticia-sec">
+                            <a src="#"> <!-- agregar que redireccione a la noticia -->
+                                <img src="{{post.foto.url}}">
+                                <div class="titulo-noticiasecundaria"> 
+                                    <p>{{post.titulo}}</p>
+                                </div>
+                            </a>
+                        </div>
+                    {% endfor %}
                 </div>
+                
                 <a src="#"> <!-- agregar link a la seccion noticias -->
                     <button class="landing-noticias-boton">
                         <p>Ver todas las noticias</p>
@@ -142,45 +123,45 @@
                     <div class="ejercicios">
                         <div class="ejercicios-sup">
                             <a href="#">
-                                <img src="assets/images/gym/workout.png">
+                                <img src="{% static 'images/gym/workout.png' %}">
                                 <p>saber más</p>
                             </a>
                             <a href="#">                                
-                                <img src="assets/images/gym/training.png">
+                                <img src="{% static 'images/gym/training.png' %}">
                                 <p>saber más</p>
                             </a>
                             <a href="#">
-                                <img src="assets/images/gym/stationary-bike.png">
+                                <img src="{% static 'images/gym/stationary-bike.png' %}">
                                 <p>saber más</p>
                             </a>
                             <a href="#" class="vuelan">
-                                <img src="assets/images/gym/running.png">
+                                <img src="{% static 'images/gym/running.png' %}">
                                 <p>saber más</p>
                             </a>
                             <a href="#" class="vuelan">
-                                <img src="assets/images/gym/dumbbells.png">
+                                <img src="{% static 'images/gym/dumbbells.png' %}">
                                 <p>saber más</p>
                             </a>
                         </div>
                         <div class="ejercicios-inf">
                             <a href="#">
-                                <img src="assets/images/gym/workout.png">
+                                <img src="{% static 'images/gym/workout.png' %}">
                                 <p>saber más</p>
                             </a>
                             <a href="#">
-                                <img src="assets/images/gym/training.png">
+                                <img src="{% static 'images/gym/training.png' %}">
                                 <p>saber más</p>
                             </a>
                             <a href="#">
-                                <img src="assets/images/gym/stationary-bike.png">
+                                <img src="{% static 'images/gym/stationary-bike.png' %}">
                                 <p>saber más</p>
                             </a>
                             <a href="#" class="vuelan">
-                                <img src="assets/images/gym/running.png">
+                                <img src="{% static 'images/gym/running.png' %}">
                                 <p>saber más</p>
                             </a>
                             <a href="#" class="vuelan">
-                                <img src="assets/images/gym/dumbbells.png">
+                                <img src="{% static 'images/gym/dumbbells.png' %}">
                                 <p>saber más</p>
                             </a>
                         </div>
@@ -190,7 +171,7 @@
                 <div class="plan-playlist"> 
                     <div class="landing-planmensual"> 
                         <div class="planmensual-titulo">
-                            <img src="assets/images/lovefitness.png">
+                            <img src="{% static 'images/lovefitness.png' %}">
                             <p>Tu plan mensual</p>
                         </div>
                         <div class="planmensual-tuplan">
@@ -234,4 +215,9 @@
         </section>
     
     </body>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script src="https://kit.fontawesome.com/1169c95eac.js" crossorigin="anonymous"></script>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <script> document.getElementById("eprofile").style.display='none'; </script>
 </html>
