--- a/gymHouse/templates/index_alumnos.html
+++ b/gymHouse/templates/index_alumnos.html
@@ -94,6 +94,7 @@
             <div class="landing-noticias">
                 <h1>Te podría interesar...</h1>
                 <div class="landing-noticias-news">
+                    {% comment %} {{posts}} {% endcomment %}
                     {% for post in posts %}
                         <div class="noticia-sec">
                             <a src="#"> <!-- agregar que redireccione a la noticia -->
